Port all templates to HOT
This change was generated and validated by running the following:

    make hot clean all validate-all

This converts all templates to be valid HOT.

Fn::Select is not converted in this change but this will actually
work with heat_template_version 2013-05-23. Fn::Select is converted
manually in the next change in this series.

This change also sets the heat_template_version to 2014-10-16 which
includes the list_join intrinsic functions used throughout these
templates.

Partial-Blueprint: tripleo-juno-remove-mergepy
Change-Id: Ib3cbb83f6ae94adb7b793ab1b662bd5c55cbb5b3

--- a/base.yaml
+++ b/base.yaml
@@ -1,77 +1,77 @@
-HeatTemplateFormatVersion: '2012-12-12'
-Description: 'Tie OpenStack components together'
-Parameters:
+heat_template_version: 2014-10-16
+description: 'Tie OpenStack components together'
+parameters:
   TemplateRoot:
-    Description: URL Base where all of our templates are available
-    Type: String
+    description: URL Base where all of our templates are available
+    type: string
   KeystoneAdminToken:
-    Description: Admin Token needed for keystone
-    Type: String
-    NoEcho: true
-Resources:
+    description: Admin Token needed for keystone
+    type: string
+    hidden: true
+resources:
   RabbitMQ:
-    Type: AWS::CloudFormation::Stack
+    type: AWS::CloudFormation::Stack
     TemplateURL:
-      Fn::Join:
-        - {Ref: TemplateRoot}
+      list_join:
+        - {get_param: TemplateRoot}
         - rabbitmq.yaml
-    Parameters:
+    parameters:
       InstanceType: m1.small
       KeyName: default
       RabbitMQImage: image-rabbitmq
   MySQL:
-    Type: AWS::CloudFormation::Stack
+    type: AWS::CloudFormation::Stack
     TemplateURL:
-      Fn::Join:
-        - {Ref: TemplateRoot}
+      list_join:
+        - {get_param: TemplateRoot}
         - mysql.yaml
-    Parameters:
+    parameters:
       InstanceType: m1.small
       KeyName: default
       MySQLImage: image-mysql
   Keystone:
-    Type: AWS::CloudFormation::Stack
+    type: AWS::CloudFormation::Stack
     TemplateURL:
-      Fn::Join:
-        - {Ref: TemplateRoot}
+      list_join:
+        - {get_param: TemplateRoot}
         - keystone.yaml
-    Parameters:
-      AdminToken: {Ref: KeystoneAdminToken}
+    parameters:
+      AdminToken: {get_param: KeystoneAdminToken}
       KeyName: default
       KeystoneDSN:
-        Fn::Join:
+        list_join:
           - 'mysql://keystone:'
-          - {"Fn::GetAtt": [ MySQL , KeystonePassword ]}
+          - {get_attr: [ MySQL , KeystonePassword ]}
           - '@'
-          - {"Fn::GetAtt": [ MySQL , MySQLHost ]}
+          - {get_attr: [ MySQL , MySQLHost ]}
           - '/keystone'
   Glance:
-    Type: AWS::CloudFormation::Stack
+    type: AWS::CloudFormation::Stack
     TemplateURL:
-      Fn::Join:
-        - {Ref: TemplateRoot}
+      list_join:
+        - {get_param: TemplateRoot}
         - glance.yaml
-    Parameters:
+    parameters:
       KeyName: default
       HeatDSN:
-        Fn::Join:
+        list_join:
           - 'mysql://glance:'
-          - {"Fn::GetAtt": [ MySQL, GlancePassword ] }
+          - {get_attr: [ MySQL, GlancePassword ] }
           - '@'
-          - {"Fn::GetAtt": [ MySQL, MySQLHost ]}
+          - {get_attr: [ MySQL, MySQLHost ]}
           - '/glance'
   Heat:
-    Type: AWS::CloudFormation::Stack
+    type: AWS::CloudFormation::Stack
     TemplateURL:
-      Fn::Join:
-        - {Ref: TemplateRoot}
+      list_join:
+        - {get_param: TemplateRoot}
         - heat.yaml
-    Parameters:
+    parameters:
       KeyName: default
       HeatDSN:
-        Fn::Join:
+        list_join:
           - 'mysql://heat:'
-          - {"Fn::GetAtt": [ MySQL, HeatPassword ] }
+          - {get_attr: [ MySQL, HeatPassword ] }
           - '@'
-          - {"Fn::GetAtt": [ MySQL, MySQLHost ]}
+          - {get_attr: [ MySQL, MySQLHost ]}
           - '/heat'
