--- a/controller.yaml
+++ b/controller.yaml
@@ -1,217 +1,217 @@
-Description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
+description: Nova API,Keystone,Heat Engine and API,Glance,Neutron,Dedicated MySQL
   server,Dedicated RabbitMQ Server
-HeatTemplateFormatVersion: '2012-12-12'
-Parameters:
+heat_template_version: 2014-10-16
+parameters:
   AdminToken:
-    Type: String
+    type: string
   BootstrapDumpPassword:
-    Default: ''
-    Description: Password to use for mysqldump from Bootstrap Host
-    Type: String
-    NoEcho: true
+    default: ''
+    description: Password to use for mysqldump from Bootstrap Host
+    type: string
+    hidden: true
   BootstrapHost:
-    Default: ''
-    Description: Load mysqldump from this Host
-    Type: String
+    default: ''
+    description: Load mysqldump from this Host
+    type: string
   BootstrapRootPassword:
-    Default: ''
-    Description: Root password for localhost access after bootstrap
-    Type: String
-    NoEcho: true
+    default: ''
+    description: Root password for localhost access after bootstrap
+    type: string
+    hidden: true
   BootstrapSlavePassword:
-    Default: ''
-    Description: Password to use with BootstrapSlaveUser
-    Type: String
-    NoEcho: true
+    default: ''
+    description: Password to use with BootstrapSlaveUser
+    type: string
+    hidden: true
   BootstrapSlaveUser:
-    Default: ''
-    Description: User to use for replication from bootstrap host
-    Type: String
+    default: ''
+    description: User to use for replication from bootstrap host
+    type: string
   GlanceDBPassword:
-    Description: Password for connecting to glance database
-    Type: String
-    NoEcho: true
+    description: Password for connecting to glance database
+    type: string
+    hidden: true
   GlanceNotifierStrategy:
-    Description: Strategy to use for Glance notification queue
-    Type: String
-    Default: noop
+    description: Strategy to use for Glance notification queue
+    type: string
+    default: noop
   GlanceLogFile:
-    Description: The filepath of the file to use for logging messages from Glance.
-    Type: String
-    Default: ''
+    description: The filepath of the file to use for logging messages from Glance.
+    type: string
+    default: ''
   HeatDBPassword:
-    Description: Password for accessing Heat database.
-    Type: String
-    NoEcho: true
+    description: Password for accessing Heat database.
+    type: string
+    hidden: true
   InstanceType:
-    Default: baremetal
-    Description: Use this flavor
-    Type: String
+    default: baremetal
+    description: Use this flavor
+    type: string
   KeyName:
-    Default: default
-    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
-    Type: String
+    default: default
+    description: Name of an existing EC2 KeyPair to enable SSH access to the instances
+    type: string
   KeystoneDBPassword:
-    Description: Password for connecting to keystone
-    Type: String
-    NoEcho: true
+    description: Password for connecting to keystone
+    type: string
+    hidden: true
   NovaDBPassword:
-    Description: Password for connecting to nova database
-    Type: String
-    NoEcho: true
+    description: Password for connecting to nova database
+    type: string
+    hidden: true
   NovaInterfaces:
-    Default: eth0
-    Type: String
+    default: eth0
+    type: string
   NeutronDBPassword:
-    Description: Password for connecting to neutron database
-    Type: String
-    NoEcho: true
+    description: Password for connecting to neutron database
+    type: string
+    hidden: true
   NeutronInterfaces:
-    Default: eth0
-    Type: String
+    default: eth0
+    type: string
   RabbitMQPassword:
-    Description: Password for RabbitMQ
-    Type: String
-    NoEcho: true
+    description: Password for RabbitMQ
+    type: string
+    hidden: true
   RabbitUserName:
-    Type: String
+    type: string
   RabbitPassword:
-    Type: String
-    NoEcho: true
+    type: string
+    hidden: true
   ServicePassword:
-    Description: admin_password for setting up auth in nova.
-    Type: String
-    NoEcho: true
+    description: admin_password for setting up auth in nova.
+    type: string
+    hidden: true
   controllerImage:
-    Type: String
+    type: string
   HeatStackDomainAdminPassword:
-    Description: Password for heat_domain_admin user.
-    Type: String
-    Default: ''
-    NoEcho: true
-Resources:
+    description: Password for heat_domain_admin user.
+    type: string
+    default: ''
+    hidden: true
+resources:
   AccessPolicy:
-    Properties:
+    properties:
       AllowedResources:
       - controller0
-    Type: OS::Heat::AccessPolicy
+    type: OS::Heat::AccessPolicy
   controller0Key:
-    Properties:
+    properties:
       UserName:
-        Ref: User
-    Type: AWS::IAM::AccessKey
+        get_resource: User
+    type: AWS::IAM::AccessKey
   User:
-    Properties:
+    properties:
       Policies:
-      - Ref: AccessPolicy
-    Type: AWS::IAM::User
+      - get_resource: AccessPolicy
+    type: AWS::IAM::User
   controller0:
-    Metadata:
+    metadata:
       admin-password:
-        Ref: ServicePassword
+        get_param: ServicePassword
       admin-token:
-        Ref: AdminToken
+        get_param: AdminToken
       mysql:
         create-users:
           - database: keystone
             username: keystone
-            password: {Ref: KeystoneDBPassword}
+            password: {get_param: KeystoneDBPassword}
           - database: heat
             username: heat
-            password: {Ref: HeatDBPassword}
+            password: {get_param: HeatDBPassword}
           - database: glance
             username: glance
-            password: {Ref: GlanceDBPassword}
+            password: {get_param: GlanceDBPassword}
           - database: nova
             username: nova
-            password: {Ref: NovaDBPassword}
+            password: {get_param: NovaDBPassword}
           - database: neutron
             username: neutron
-            password: {Ref: NeutronDBPassword}
+            password: {get_param: NeutronDBPassword}
       glance:
         db:
-          Fn::Join:
+          list_join:
             - ''
             - - 'mysql://glance:'
-              - {Ref: GlanceDBPassword}
+              - {get_param: GlanceDBPassword}
               - '@127.0.0.1/glance'
           notifier-strategy:
-            Ref: GlanceNotifierStrategy
+            get_param: GlanceNotifierStrategy
           log-file:
-            Ref: GlanceLogFile
+            get_param: GlanceLogFile
       heat:
         db:
-          Fn::Join:
+          list_join:
             - ''
             - - 'mysql://heat:'
-              - {Ref: HeatDBPassword}
+              - {get_param: HeatDBPassword}
               - '@127.0.0.1/heat'
         access_key_id:
-          Ref: controller0Key
+          get_resource: controller0Key
         refresh:
         - resource: controller0
         secret_key:
-          Fn::GetAtt:
+          get_attr:
           - controller0Key
           - SecretAccessKey
         stack:
           name:
-            Ref: AWS::StackName
+            get_param: AWS::StackName
           region:
-            Ref: AWS::Region
+            get_param: AWS::Region
         auth_encryption_key: unset
-        stack_domain_admin_password: {Ref: HeatStackDomainAdminPassword}
+        stack_domain_admin_password: {get_param: HeatStackDomainAdminPassword}
       interfaces:
         control:
-          Ref: NovaInterfaces
+          get_param: NovaInterfaces
       keystone:
         host:
           '127.0.0.1'
         db:
-          Fn::Join:
+          list_join:
             - ''
             - - 'mysql://keystone:'
-              - {Ref: KeystoneDBPassword}
+              - {get_param: KeystoneDBPassword}
               - '@127.0.0.1/keystone'
       nova:
         db:
-          Fn::Join:
+          list_join:
             - ''
             - - 'mysql://nova:'
-              - {Ref: NovaDBPassword}
+              - {get_param: NovaDBPassword}
               - '@127.0.0.1/nova'
       neutron:
         host:
           '127.0.0.1'
         ovs_db:
-          Fn::Join:
+          list_join:
             - ''
             - - 'mysql://neutron:'
-              - {Ref: NeutronDBPassword}
+              - {get_param: NeutronDBPassword}
               - '@127.0.0.1/ovs_neutron'
       rabbit:
         host:
           '127.0.0.1'
         username:
-          Ref: RabbitUserName
+          get_param: RabbitUserName
         password:
-          Ref: RabbitPassword
+          get_param: RabbitPassword
         users:
           username:
-            Ref: RabbitUserName
+            get_param: RabbitUserName
           password:
-            Ref: RabbitPassword
+            get_param: RabbitPassword
         cookie:
-          Fn::GetAtt:
+          get_attr:
           - RabbitCookie
           - value
       service-password:
-        Ref: ServicePassword
-    Properties:
+        get_param: ServicePassword
+    properties:
       ImageId:
-        Ref: controllerImage
+        get_param: controllerImage
       InstanceType:
-        Ref: InstanceType
+        get_param: InstanceType
       KeyName:
-        Ref: KeyName
-    Type: AWS::EC2::Instance
+        get_param: KeyName
+    type: AWS::EC2::Instance
