--- a/debian-mirror.yaml
+++ b/debian-mirror.yaml
@@ -1,31 +1,31 @@
-Description: 'Debian-mirror: A Debian or Ubuntu mirror in the cloud'
-Parameters:
+description: 'Debian-mirror: A Debian or Ubuntu mirror in the cloud'
+parameters:
   DebianMirrorMirror:
-    Default: http://archive.ubuntu.com/ubuntu
-    Description: The mirror that is to be used as the source
-    Type: String
+    default: http://archive.ubuntu.com/ubuntu
+    description: The mirror that is to be used as the source
+    type: string
   DebianMirrorSuites:
-    Default: ["saucy", "saucy-updates", "saucy-security"]
-    Description: The suites to be mirrored
-    Type: JSON
+    default: ["saucy", "saucy-updates", "saucy-security"]
+    description: The suites to be mirrored
+    type: JSON
   DebianMirrorArchitectures:
-    Default: [{"arch": "amd64"}]
-    Description: The architectures to be mirrored
-    Type: JSON
+    default: [{"arch": "amd64"}]
+    description: The architectures to be mirrored
+    type: JSON
   DebianMirrorComponents:
-    Default: ["main", "restricted", "universe", "multiverse"]
-    Description: The components to be mirrored
-    Type: JSON
-Resources:
+    default: ["main", "restricted", "universe", "multiverse"]
+    description: The components to be mirrored
+    type: JSON
+resources:
   debianMirrorConfig:
-    Type: AWS::AutoScaling::LaunchConfiguration
-    Metadata:
+    type: AWS::AutoScaling::LaunchConfiguration
+    metadata:
       debian-mirror:
         mirror:
-          Ref: DebianMirrorMirror
+          get_param: DebianMirrorMirror
         suites:
-          Ref: DebianMirrorSuites
+          get_param: DebianMirrorSuites
         architectures:
-          Ref: DebianMirrorArchitectures
+          get_param: DebianMirrorArchitectures
         components:
-          Ref: DebianMirrorComponents
+          get_param: DebianMirrorComponents
