--- a/nfs-server-source.yaml
+++ b/nfs-server-source.yaml
@@ -1,28 +1,28 @@
-Description: 'NFS server share configuration for testing'
-Resources:
+description: 'NFS server share configuration for testing'
+resources:
   controller0Config:
-    Type: AWS::AutoScaling::LaunchConfiguration
-    Metadata:
+    type: AWS::AutoScaling::LaunchConfiguration
+    metadata:
       nfs_server:
         shares:
           Merge::Map:
             NovaCompute0:
-              Fn::Join:
+              list_join:
               - ' '
               - - Fn::Select:
                   - 0
                   - Fn::Select:
                     - ctlplane
-                    - Fn::GetAtt:
+                    - get_attr:
                       - NovaCompute0
                       - networks
             BlockStorage0:
-              Fn::Join:
+              list_join:
               - ' '
               - - Fn::Select:
                   - 0
                   - Fn::Select:
                     - ctlplane
-                    - Fn::GetAtt:
+                    - get_attr:
                       - BlockStorage0
                       - networks
