--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -1,7 +1,7 @@
-Resources:
+resources:
   NovaComputeConfig:
-    Type: OS::Heat::StructuredConfig
-    Properties:
+    type: OS::Heat::StructuredConfig
+    properties:
       group: os-apply-config
       config:
         nova:
@@ -54,7 +54,7 @@ Resources:
           servers:
               - {server: {get_input: ntp_server}, fudge: "stratum 0"}
   NovaComputePassthrough:
-    Type: OS::Heat::StructuredConfig
-    Properties:
+    type: OS::Heat::StructuredConfig
+    properties:
       group: os-apply-config
       config: {get_input: passthrough_config}
