--- a/swift-deploy.yaml
+++ b/swift-deploy.yaml
@@ -1,55 +1,55 @@
-Description: 'Swift-proxy: OpenStack object storage proxy'
-Parameters:
+description: 'Swift-proxy: OpenStack object storage proxy'
+parameters:
   SwiftHashSuffix:
-    Default: unset
-    Description: A random string to be used as a salt when hashing to determine mappings in the ring.
-    Type: String
-    NoEcho: true
+    default: unset
+    description: A random string to be used as a salt when hashing to determine mappings in the ring.
+    type: string
+    hidden: true
   SwiftPassword:
-    Default: unset
-    Description: The password for the swift service account, used by the swift proxy services.
-    Type: String
-    NoEcho: true
-Resources:
+    default: unset
+    description: The password for the swift service account, used by the swift proxy services.
+    type: string
+    hidden: true
+resources:
   controller0Swift:
-    Type: OS::Heat::StructuredDeployment
-    Properties:
-      config: {Ref: SwiftConfig}
-      server: {Ref: controller0}
+    type: OS::Heat::StructuredDeployment
+    properties:
+      config: {get_resource: SwiftConfig}
+      server: {get_resource: controller0}
       signal_transport: NO_SIGNAL
       input_values:
-        swift_hash_suffix: {Ref: SwiftHashSuffix}
-        swift_password: {Ref: SwiftPassword}
+        swift_hash_suffix: {get_param: SwiftHashSuffix}
+        swift_password: {get_param: SwiftPassword}
         swift_devices:
-          Fn::Join:
+          list_join:
           - ', '
           - Merge::Map:
               controller0:
-                Fn::Join:
+                list_join:
                 - ''
                 - - 'r1z1-'
-                  - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+                  - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
                   - ':%PORT%/d1'
               SwiftStorage0:
-                Fn::Join:
+                list_join:
                 - ''
                 - - 'r1z1-'
                   - Fn::Select:
                     - 0
                     - Fn::Select:
                       - 'ctlplane'
-                      - Fn::GetAtt:
+                      - get_attr:
                         - SwiftStorage0
                         - networks
                   - ':%PORT%/d1'
         swift_proxy_memcache:
-          Fn::Join:
+          list_join:
             - ','
             - Merge::Map:
                 controller0:
-                  Fn::Join:
+                  list_join:
                     - ', '
-                    - - Fn::Join:
+                    - - list_join:
                         - ''
-                        - - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+                        - - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
                           - ':11211'
