--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -1,7 +1,7 @@
-Resources:
+resources:
   SwiftConfig:
-    Type: OS::Heat::StructuredConfig
-    Properties:
+    type: OS::Heat::StructuredConfig
+    properties:
       group: os-apply-config
       config:
         swift:
@@ -12,7 +12,7 @@ Resources:
           replicas: 1
           service-password: { get_input: swift_password }
         neutron:
-          enable_tunnelling: {Ref: NeutronEnableTunnelling}
-          tenant_network_type: {Ref: NeutronNetworkType}
+          enable_tunnelling: {get_param: NeutronEnableTunnelling}
+          tenant_network_type: {get_param: NeutronNetworkType}
           ovs:
             local_ip: { get_input: neutron_local_ip }
