--- a/undercloud-bm-nova-deploy.yaml
+++ b/undercloud-bm-nova-deploy.yaml
@@ -1,25 +1,25 @@
-Parameters:
+parameters:
   NeutronPublicInterface:
-    Default: eth2
-    Description: What interface to bridge onto br-ex for network nodes.
-    Type: String
+    default: eth2
+    description: What interface to bridge onto br-ex for network nodes.
+    type: string
   PowerManager:
-    Default: nova.virt.baremetal.ipmi.IPMI
-    Description: Bare metal power manager driver.
-    Type: String
+    default: nova.virt.baremetal.ipmi.IPMI
+    description: Bare metal power manager driver.
+    type: string
   PxeDeployTimeout:
-    Default: 2400
-    Description: Timeout for PXE deployment of baremetal nodes
-    Type: Number
-Resources:
+    default: 2400
+    description: Timeout for PXE deployment of baremetal nodes
+    type: number
+resources:
   01_undercloudNovaDeployment:
-    Type: OS::Heat::StructuredDeployment
-    Properties:
-      config: {Ref: undercloudNovaConfig}
-      server: {Ref: undercloud}
+    type: OS::Heat::StructuredDeployment
+    properties:
+      config: {get_resource: undercloudNovaConfig}
+      server: {get_resource: undercloud}
       signal_transport: NO_SIGNAL
       input_values:
-        nova_arch: {Ref: BaremetalArch}
-        power_manager: {Ref: PowerManager}
-        pxe_deploy_timeout: {Ref: PxeDeployTimeout}
-        nova_service_password: {Ref: NovaPassword}
+        nova_arch: {get_param: BaremetalArch}
+        power_manager: {get_param: PowerManager}
+        pxe_deploy_timeout: {get_param: PxeDeployTimeout}
+        nova_service_password: {get_param: NovaPassword}
