--- a/undercloud-vm-ironic-config.yaml
+++ b/undercloud-vm-ironic-config.yaml
@@ -1,7 +1,7 @@
-Resources:
+resources:
   undercloudNovaConfig:
-    Type: OS::Heat::StructuredConfig
-    Properties:
+    type: OS::Heat::StructuredConfig
+    properties:
       config:
         nova:
           compute_hostname: undercloud
@@ -16,8 +16,8 @@ Resources:
             reserved_host_memory_mb: 0
           service-password: {get_input: nova_service_password}
   undercloudIronicConfig:
-    Type: OS::Heat::StructuredConfig
-    Properties:
+    type: OS::Heat::StructuredConfig
+    properties:
       config:
         ironic:
           db: mysql://ironic:unset@localhost/ironic
