--- a/undercloud-vm-ironic-deploy.yaml
+++ b/undercloud-vm-ironic-deploy.yaml
@@ -1,31 +1,31 @@
-Parameters:
+parameters:
   IronicPassword:
-    Type: String
-    Description: Ironic password for keystone access
-    NoEcho: true
+    type: string
+    description: Ironic password for keystone access
+    hidden: true
   NeutronPublicInterface:
-    Default: eth0
-    Description: What interface to bridge onto br-ex for network nodes.
-    Type: String
+    default: eth0
+    description: What interface to bridge onto br-ex for network nodes.
+    type: string
   PowerSSHPrivateKey:
-    Description: Private key for using to ssh to a virtual power host.
-    Type: String
-    NoEcho: true
-Resources:
+    description: Private key for using to ssh to a virtual power host.
+    type: string
+    hidden: true
+resources:
   01_undercloudNovaDeployment:
-    Type: OS::Heat::StructuredDeployment
-    Properties:
-      config: {Ref: undercloudNovaConfig}
-      server: {Ref: undercloud}
+    type: OS::Heat::StructuredDeployment
+    properties:
+      config: {get_resource: undercloudNovaConfig}
+      server: {get_resource: undercloud}
       signal_transport: NO_SIGNAL
       input_values:
-        nova_service_password: {Ref: NovaPassword}
+        nova_service_password: {get_param: NovaPassword}
   02_undercloudIronicDeployment:
-    Type: OS::Heat::StructuredDeployment
-    Properties:
-      config: {Ref: undercloudIronicConfig}
-      server: {Ref: undercloud}
+    type: OS::Heat::StructuredDeployment
+    properties:
+      config: {get_resource: undercloudIronicConfig}
+      server: {get_resource: undercloud}
       signal_transport: NO_SIGNAL
       input_values:
-        ironic_service_password: {Ref: IronicPassword}
-        virtual_power_ssh_key: {Ref: PowerSSHPrivateKey}
+        ironic_service_password: {get_param: IronicPassword}
+        virtual_power_ssh_key: {get_param: PowerSSHPrivateKey}
