--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -1,90 +1,90 @@
-HeatTemplateFormatVersion: '2012-12-12'
-Description: 'Common Block Storage Configuration'
-Parameters:
+heat_template_version: 2014-10-16
+description: 'Common Block Storage Configuration'
+parameters:
   BlockStorageImage:
-    Type: String
-    Default: overcloud-cinder-volume
+    type: string
+    default: overcloud-cinder-volume
   OvercloudBlockStorageFlavor:
-    Default: baremetal
-    Description: Flavor for block storage nodes to request when deploying.
-    Type: String
+    default: baremetal
+    description: Flavor for block storage nodes to request when deploying.
+    type: string
   NeutronNetworkType:
-    Type: String
-    Default: 'gre'
+    type: string
+    default: 'gre'
   NeutronEnableTunnelling:
-    Type: String
-    Default: True
-Resources:
+    type: string
+    default: True
+resources:
   BlockStorage0:
-    Type: OS::Nova::Server
-    Properties:
+    type: OS::Nova::Server
+    properties:
       image:
-        {Ref: BlockStorageImage}
-      flavor: {Ref: OvercloudBlockStorageFlavor}
-      key_name: {Ref: KeyName}
+        {get_param: BlockStorageImage}
+      flavor: {get_param: OvercloudBlockStorageFlavor}
+      key_name: {get_param: KeyName}
       user_data_format: SOFTWARE_CONFIG
   BlockStorage0Deployment:
-    Type: OS::Heat::StructuredDeployment
-    Properties:
-      server: {Ref: BlockStorage0}
-      config: {Ref: BlockStorageConfig}
+    type: OS::Heat::StructuredDeployment
+    properties:
+      server: {get_resource: BlockStorage0}
+      config: {get_resource: BlockStorageConfig}
       input_values:
-        controller_host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
-        cinder_dsn: {"Fn::Join": ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] } , '/cinder']]}
-        neutron_local_ip: {"Fn::Select": [0, "Fn::Select": [ctlplane, {"Fn::GetAtt": [BlockStorage0 , networks]}]]}
+        controller_host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
+        cinder_dsn: {list_join: ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] } , '/cinder']]}
+        neutron_local_ip: {"Fn::Select": [0, "Fn::Select": [ctlplane, {get_attr: [BlockStorage0 , networks]}]]}
       signal_transport: NO_SIGNAL
   BlockStorageConfig:
-    Type: OS::Heat::StructuredConfig
-    Properties:
+    type: OS::Heat::StructuredConfig
+    properties:
       group: os-apply-config
       config:
-        admin-password: {Ref: AdminPassword}
+        admin-password: {get_param: AdminPassword}
         keystone:
           host: {get_input: controller_host}
         cinder:
           db: {get_input: cinder_dsn}
           volume_size_mb:
-            Ref: CinderLVMLoopDeviceSize
+            get_param: CinderLVMLoopDeviceSize
           service-password:
-            Ref: CinderPassword
+            get_param: CinderPassword
           iscsi-helper:
-            Ref: CinderISCSIHelper
-        admin-password: {Ref: AdminPassword}
+            get_param: CinderISCSIHelper
+        admin-password: {get_param: AdminPassword}
         rabbit:
           host: {get_input: controller_host}
-          username: {Ref: RabbitUserName}
-          password: {Ref: RabbitPassword}
+          username: {get_param: RabbitUserName}
+          password: {get_param: RabbitPassword}
         interfaces:
-          control: {Ref: NeutronPublicInterface}
+          control: {get_param: NeutronPublicInterface}
         neutron:
           ovs:
             local_ip: {get_input: neutron_local_ip}
-            tenant_network_type: {Ref: NeutronNetworkType}
-            enable_tunneling: {Ref: NeutronEnableTunnelling}
+            tenant_network_type: {get_param: NeutronNetworkType}
+            enable_tunneling: {get_param: NeutronEnableTunnelling}
           service-password:
-            Ref: NeutronPassword
+            get_param: NeutronPassword
         config:
           keystone:
             host: {get_input: controller_host}
           cinder:
             db: {get_input: cinder_dsn}
             volume_size_mb:
-              Ref: CinderLVMLoopDeviceSize
+              get_param: CinderLVMLoopDeviceSize
             service-password:
-              Ref: CinderPassword
+              get_param: CinderPassword
             iscsi-helper:
-              Ref: CinderISCSIHelper
-          admin-password: {Ref: AdminPassword}
+              get_param: CinderISCSIHelper
+          admin-password: {get_param: AdminPassword}
           rabbit:
             host: {get_input: controller_host}
-            username: {Ref: RabbitUserName}
-            password: {Ref: RabbitPassword}
+            username: {get_param: RabbitUserName}
+            password: {get_param: RabbitPassword}
           interfaces:
-            control: {Ref: NeutronPublicInterface}
+            control: {get_param: NeutronPublicInterface}
           neutron:
             ovs:
               local_ip: { get_input: neutron_local_ip }
-              tenant_network_type: {Ref: NeutronNetworkType}
-              enable_tunneling: {Ref: NeutronEnableTunnelling}
+              tenant_network_type: {get_param: NeutronNetworkType}
+              enable_tunneling: {get_param: NeutronEnableTunnelling}
             service-password:
-              Ref: NeutronPassword
+              get_param: NeutronPassword
