--- a/undercloud-vm-nova-config.yaml
+++ b/undercloud-vm-nova-config.yaml
@@ -1,7 +1,7 @@
-Resources:
+resources:
   undercloudNovaConfig:
-    Type: OS::Heat::StructuredConfig
-    Properties:
+    type: OS::Heat::StructuredConfig
+    properties:
       config:
         nova:
           compute_hostname: undercloud
