--- a/undercloud-vm-nova-deploy.yaml
+++ b/undercloud-vm-nova-deploy.yaml
@@ -1,40 +1,40 @@
-Parameters:
+parameters:
   NeutronPublicInterface:
-    Default: eth0
-    Description: What interface to bridge onto br-ex for network nodes.
-    Type: String
+    default: eth0
+    description: What interface to bridge onto br-ex for network nodes.
+    type: string
   PowerManager:
-    Default: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
-    Description: Bare metal power manager driver.
-    Type: String
+    default: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
+    description: Bare metal power manager driver.
+    type: string
   PxeDeployTimeout:
-    Default: 2400
-    Description: Timeout for PXE deployment of baremetal nodes
-    Type: Number
+    default: 2400
+    description: Timeout for PXE deployment of baremetal nodes
+    type: number
   PowerSSHHost:
-    Default: 192.168.122.1
-    Description: SSH host to ssh to for power management operations.
-    Type: String
+    default: 192.168.122.1
+    description: SSH host to ssh to for power management operations.
+    type: string
   PowerSSHPrivateKey:
-    Description: Private key for using to ssh to a virtual power host.
-    Type: String
-    NoEcho: true
+    description: Private key for using to ssh to a virtual power host.
+    type: string
+    hidden: true
   PowerUserName:
-    Default: stack
-    Description: What username to ssh to the virtual power host with.
-    Type: String
-Resources:
+    default: stack
+    description: What username to ssh to the virtual power host with.
+    type: string
+resources:
   01_undercloudNovaDeployment:
-    Type: OS::Heat::StructuredDeployment
-    Properties:
-      config: {Ref: undercloudNovaConfig}
-      server: {Ref: undercloud}
+    type: OS::Heat::StructuredDeployment
+    properties:
+      config: {get_resource: undercloudNovaConfig}
+      server: {get_resource: undercloud}
       signal_transport: NO_SIGNAL
       input_values:
-        nova_arch: {Ref: BaremetalArch}
-        power_manager: {Ref: PowerManager}
-        pxe_deploy_timeout: {Ref: PxeDeployTimeout}
-        nova_service_password: {Ref: NovaPassword}
-        user: {Ref: PowerUserName}
-        ssh_host: {Ref: PowerSSHHost}
-        ssh_key: {Ref: PowerSSHPrivateKey}
+        nova_arch: {get_param: BaremetalArch}
+        power_manager: {get_param: PowerManager}
+        pxe_deploy_timeout: {get_param: PxeDeployTimeout}
+        nova_service_password: {get_param: NovaPassword}
+        user: {get_param: PowerUserName}
+        ssh_host: {get_param: PowerSSHHost}
+        ssh_key: {get_param: PowerSSHPrivateKey}
